--- a/finished/config.yaml
+++ b/finished/config.yaml
@@ -19,5 +19,5 @@ jsResource:
 
 # Serve the static files from the web directory as a web application
 static:
-  files: 'dist/*'
+  files: 'dist/**'
   
