--- a/start/package.json
+++ b/start/package.json
@@ -10,8 +10,7 @@
   },
   "devDependencies": {
     "typescript": "~5.9.3",
-    "vite": "^7.1.7",
-    "@harperdb/vite-plugin": "^0.0.1"
+    "vite": "^7.1.7"
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.15",
