udpating start and finish package.json files

--- a/start/config.yaml
+++ b/start/config.yaml
@@ -17,7 +17,7 @@ graphqlSchema:
 jsResource:
   files: 'resources.js'
 
-# Add @harperdb/vite-plugin here
+# Add @harperfast/vite-plugin here
 
 # Serve the static files from the web directory as a web application
 # static:
