--- a/finished/package.json
+++ b/finished/package.json
@@ -9,9 +9,9 @@
     "preview": "vite preview"
   },
   "devDependencies": {
+    "@harperfast/vite-plugin": "^0.0.1",
     "typescript": "~5.9.3",
-    "vite": "^7.1.7",
-    "@harperdb/vite-plugin": "^0.0.1"
+    "vite": "^7.1.7"
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.15",
